--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Bienvenue sur mon portfolio !</h1>
   <p>Je suis étudiant en BTS SIO SLAM 👨‍💻</p>
+  <div class="loader"></div>
   <script src="script.js"></script>
 </body>
 </html>
