--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bienvenue sur mon portfolio !</h1>
-  <p>Je suis étudiant en BTS SIO SLAM 👨‍💻</p>
-  <div class="loader"></div>
-  <script src="script.js"></script>
+    <h1>Bienvenue sur mon portfolio !</h1>
+    <p>Je suis étudiant en BTS SIO SLAM</p>
+    <p>Site en développement ... 👨‍💻</p>
+    <div class="loader"></div>
+    <script src="script.js"></script>
 </body>
 </html>
